styles.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap');

:root {
	--violet: hsl(257, 40%, 49%);
	--magenta: hsl(300, 69%, 71%);
	--white: hsl(0, 0%, 100%);
	--font-color: hsl(0, 0%, 100%);
}
/* font-family: 'Open Sans', sans-serif;
    font-family: 'Poppins', sans-serif;*/

/* resets */

html {
	font-size: 62.5%;
	color: var(--font-color);
	font-family: 'Open Sans', sans-serif;
}
h1 {
	font-family: 'Poppins', sans-serif;
}

* {
	padding: 0;
	margin: 0;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}

a {
	text-decoration: none;
	display: block;
}

img {
	width: 100%;
	height: auto;
}

/* helpers */
.flex {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
}

/* mobile styles */

body {
	height: 100vh;
	width: 100vw;
	background-color: var(--violet);
	background-image: url(/images/bg-mobile.svg);
	background-repeat: no-repeat;
	background-size: 100%;
}

.container {
	height: 100%;
	width: 100%;
}

header {
	padding: 3rem 0 5rem 2.5rem;
}

.logo {
	width: 40%;
}

main {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	gap: 7rem;
	width: 90%;
	margin: 0 auto;
}

.main-image {
	max-width: 88%;
	padding: 1rem 0 0 0;
	margin: 0 auto;
}

.main-content {
	-webkit-box-ordinal-group: 2;
	-ms-flex-order: 1;
	order: 1;
}

.main-content h1 {
	font-size: 2.5rem;
	padding: 0 0 1rem 0;
}

.main-content p,
.main-content h1 {
	text-align: center;
}

.main-content p {
	font-size: 1.8rem;
	line-height: 1.6;
	padding: 0 0 2.5rem 0;
}

.cta {
	font-size: 1.5rem;
	text-align: center;
	color: var(--violet);
	width: 60%;
	padding: 1rem 0;
	margin: 0 auto;
	border-radius: 2rem;
	background-color: var(--white);
	box-shadow: 9px 10px 5px -6px rgba(0, 0, 0, 0.54);
	-webkit-box-shadow: 9px 10px 5px -6px rgba(0, 0, 0, 0.54);
	-moz-box-shadow: 9px 10px 5px -6px rgba(0, 0, 0, 0.54);
}

svg {
	width: 3rem;
	height: 3rem;
	border: 0.2rem solid white;
	padding: 0.5rem;
	border-radius: 50%;
}

footer {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	gap: 1.5rem;
	padding: 3rem 0 0 0;
}

@media only screen and (min-width: 800px) {
	body {
		background-image: url(/images/bg-desktop.svg);
		background-size: contain;
	}

	.logo {
		width: 12%;
		padding: 0 0 0 2rem;
	}

	main {
		padding: 5rem 0 0 0;
		-webkit-box-orient: horizontal;
		-webkit-box-direction: normal;
		-ms-flex-direction: row;
		flex-direction: row;
		-ms-flex-pack: distribute;
		justify-content: space-around;
		gap: 5rem;
	}

	.main-image {
		width: 50%;
		justify-items: start;
		margin: 0;
	}

	.main-image img {
		width: 100%;
		/* margin: 0 10rem 0 0; */
	}

	.main-content {
		width: 50%;
		-ms-flex-item-align: start;
		align-self: flex-start;
		padding: 5rem 1rem 0 0rem;
	}

	.main-content p,
	.main-content h1 {
		text-align: left;
	}

	.main-content h1 {
		font-size: 5rem;
		padding: 0 3rem 0 0;
	}

	.main-content p {
		width: 80%;
		padding: 0 2rem 2rem 0;
	}

	.cta {
		margin: 0;
		width: 25%;
	}

	.cta:hover {
		background-color: var(--magenta);
		color: var(--white);
		-webkit-transition: background-color 300ms;
		-o-transition: background-color 300ms;
		transition: background-color 300ms;
	}

	footer {
		-webkit-box-pack: end;
		-ms-flex-pack: end;
		justify-content: flex-end;
		padding: 0rem 6rem 0 0;
	}

	svg {
		width: 4rem;
		height: 4rem;
	}

	svg:hover path,
	svg:hover {
		fill: var(--magenta);
		border-color: var(--magenta);
	}
}

